@@ -9,7 +9,7 @@ public enum BoardDirection {
 
     N, NE, E, SE, S, SW, W, NW;
 
-    private final static List<BoardDirection> DIRECTIONS = Collections.unmodifiableList(Arrays.asList(N, NE, E, SE, S, SW, W, NW));
+    private final static List<BoardDirection> DIRECTIONS = List.of(N, NE, E, SE, S, SW, W, NW);
     private final static int SIZE = DIRECTIONS.size();
     private final static Random random = new Random();
 
@@ -27,34 +27,15 @@ public enum BoardDirection {
 
     public static Vector2D toUnitVector2D(BoardDirection currentDirection) {
 
-        Vector2D unitVector = null;
-        switch (currentDirection) {
-            case N:
-                unitVector = new Vector2D(0, 1);
-                break;
-            case NE:
-                unitVector = new Vector2D(1, 1);
-                break;
-            case E:
-                unitVector = new Vector2D(1, 0);
-                break;
-            case SE:
-                unitVector = new Vector2D(1, -1);
-                break;
-            case S:
-                unitVector = new Vector2D(0, -1);
-                break;
-            case SW:
-                unitVector = new Vector2D(-1, -1);
-                break;
-            case W:
-                unitVector = new Vector2D(-1, 0);
-                break;
-            case NW:
-                unitVector = new Vector2D(-1, 1);
-                break;
-        }
-
-        return unitVector;
+        return switch (currentDirection) {
+            case N -> new Vector2D(0, 1);
+            case NE -> new Vector2D(1, 1);
+            case E -> new Vector2D(1, 0);
+            case SE -> new Vector2D(1, -1);
+            case S -> new Vector2D(0, -1);
+            case SW -> new Vector2D(-1, -1);
+            case W -> new Vector2D(-1, 0);
+            case NW -> new Vector2D(-1, 1);
+        };
     }
 }
